--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "dependencies": {
         "@babel/preset-env": "^7.1.0",
         "@babel/preset-react": "^7.0.0",
+        "axios": "^0.19.0",
         "babel": "^6.23.0",
         "babel-core": "^6.26.3",
+        "body-parser": "^1.19.0",
         "express": "^4.16.4",
         "react": "^16.5.2",
         "react-dom": "^16.5.2",
