--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "babel-core": "^6.26.3",
         "body-parser": "^1.19.0",
         "express": "^4.17.1",
+        "mongoose": "^5.7.11",
         "react": "^16.5.2",
         "react-dom": "^16.5.2",
         "socket.io": "^2.3.0"
